Opened 2 years ago

Closed 2 years ago

Last modified 2 years ago

#17770 closed bug (fixed)

Link speed info missing in network GUI

Reported by: cocobean Owned by: nobody
Priority: normal Milestone: R1/beta4
Component: Drivers/Network/rtl81xx Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

The network GUI does not show the media type link speed when the NIC is enabled. The link speed info disappears in network GUI when the NIC is enabled (i.e. not shown) versus disabled (i.e. shown). For Haiku R1B3, the network GUI link speed info (i.e. link speed info shown whether NIC disabled/enabled) and ifconfig - Media type info is shown.

Ex. ifconfig - /dev/net/<driver>: Media type: "1 GBit, 1000BASE-T"

Change History (3)

comment:1 by waddlesplash, 2 years ago

Summary: hrev56154: Link speed info missing in network GUILink speed info missing in network GUI

This is a longstanding problem that affects most of the *BSD drivers, I think.

comment:2 by waddlesplash, 2 years ago

Milestone: UnscheduledR1/beta4
Resolution: fixed
Status: newclosed

Actually it was rather recent. Fixed in hrev56186.

comment:3 by cocobean, 2 years ago

Verified. Tested with hrev56192.

Note: See TracTickets for help on using tickets.